# pk-common

./: .gitignore  LICENSE  README.md  pyproject.toml
pkcommon/: apdu.py  cli.py  core.py  ctap.py  discovery.py  modules.py  vendor.py
tests/: find_hsm_aid.py  probe_applets.py  test_apdu.py  test_ctap.py  test_discovery.py
